--- a/test/index.html
+++ b/test/index.html
@@ -25,8 +25,8 @@
 </div>
 
 <script type=module>
-  import jsincss from 'https://unpkg.com/jsincss/index.js'
-  import viewport from '../index.js'
+  import jsincss from 'https://unpkg.com/jsincss/index.vanilla.js'
+  import viewport from '../index.vanilla.js'
 
   jsincss(()=> `
 
